// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render the card component with a feature variant 1`] = `
<div>
  <div>
    <div
      class="nhsuk-card nhsuk-card--feature"
    >
      <div
        class="nhsuk-card__content nhsuk-card__content--feature"
      >
        <h2
          class="nhsuk-card__heading nhsuk-card__heading--feature nhsuk-u-font-size-24"
        >
          A
        </h2>
        <ul
          class="nhsuk-list nhsuk-list--border"
        >
          <li>
            <a
              class="nhsuk-link"
              href="#"
            >
              AAA
            </a>
          </li>
          <li>
            <a
              class="nhsuk-link"
              href="#"
            >
              Abdominal aortic aneurysm
            </a>
          </li>
          <li>
            <a
              class="nhsuk-link"
              href="#"
            >
              Abscess
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the card component with a non-urgent variant 1`] = `
<div>
  <div
    class="nhsuk-card nhsuk-card--care nhsuk-card--care--non-urgent"
  >
    <div
      class="nhsuk-card--care__heading-container"
    >
      <h2
        class="nhsuk-card--care__heading"
      >
        <span
          role="text"
        >
          <span
            class="nhsuk-u-visually-hidden"
          >
            Non-urgent advice: 
          </span>
          Speak to a GP if:
        </span>
      </h2>
      <span
        aria-hidden="true"
        class="nhsuk-card--care__arrow"
      />
    </div>
    <div
      class="nhsuk-card__content nhsuk-card__content--non-urgent"
    >
      <ul
        class="nhsuk-list nhsuk-list--bullet"
      >
        <li>
          you're not sure it's chickenpox
        </li>
        <li>
          the skin around the blisters is red, hot or painful (signs of infection)
        </li>
        <li>
          your child is 
          <a
            href="#"
          >
            dehydrated
          </a>
        </li>
        <li>
          you're concerned about your child or they get worse
        </li>
      </ul>
      <p
        class="nhsuk-body"
      >
        Tell the receptionist you think it's chickenpox before going in. They may recommend a special appointment time if other patients are at risk.
      </p>
    </div>
  </div>
</div>
`;

exports[`should render the card component with a primary variant 1`] = `
<div>
  <div
    class="nhsuk-grid-row nhsuk-card-group"
  >
    <div
      class="nhsuk-grid-column-two-thirds nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card nhsuk-card--clickable nhsuk-card--primary"
      >
        <div
          class="nhsuk-card__content nhsuk-card__content--primary"
        >
          <h2
            class="nhsuk-heading-m nhsuk-card__heading"
          >
            <a
              class="nhsuk-card__link"
              href="#"
            >
              Introduction to care and support
            </a>
          </h2>
          <p
            class="nhsuk-card__description"
          >
            A quick guide for people who have care and support needs and their carers
          </p>
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__chevron-right-circle"
            focusable="false"
            height="27"
            width="27"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="13.333"
              cy="13.333"
              fill=""
              r="13.333"
            />
            <g
              data-name="Group 1"
              fill="none"
              stroke="#fff"
              stroke-linecap="round"
              stroke-miterlimit="10"
              stroke-width="2.667"
            >
              <path
                d="M15.438 13l-3.771 3.771"
              />
              <path
                d="M11.667 9.229L15.438 13"
                data-name="Path"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the card component with a secondary variant 1`] = `
<div>
  <div
    class="nhsuk-grid-row nhsuk-card-group"
  >
    <div
      class="nhsuk-grid-column-two-thirds nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card nhsuk-card--clickable nhsuk-card--secondary"
      >
        <div
          class="nhsuk-card__content nhsuk-card__content--secondary"
        >
          <h2
            class="nhsuk-heading-m nhsuk-card__heading"
          >
            <a
              class="nhsuk-card__link"
              href="#"
            >
              Urgent and emergency care services
            </a>
          </h2>
          <p
            class="nhsuk-card__description"
          >
            Services the NHS provides if you need urgent or emergency medical help
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the card component with an emergency variant 1`] = `
<div>
  <div
    class="nhsuk-card nhsuk-card--care nhsuk-card--care--emergency"
  >
    <div
      class="nhsuk-card--care__heading-container"
    >
      <h2
        class="nhsuk-card--care__heading"
      >
        <span
          role="text"
        >
          <span
            class="nhsuk-u-visually-hidden"
          >
            Emergency advice: 
          </span>
          Go to A&E or call 999 if:
        </span>
      </h2>
      <span
        aria-hidden="true"
        class="nhsuk-card--care__arrow"
      />
    </div>
    <div
      class="nhsuk-card__content nhsuk-card__content--emergency"
    >
      <ul
        class="nhsuk-list nhsuk-list--bullet"
      >
        <li>
          you or someone you know needs immediate help
        </li>
        <li>
          you have seriously harmed yourself – for example, by taking a drug overdose
        </li>
      </ul>
      <p
        class="nhsuk-body"
      >
        A mental health emergency should be taken as seriously as a medical emergency.
      </p>
      <p
        class="nhsuk-body"
      >
        <a
          class="nhsuk-link"
          href="#"
        >
          Find your nearest A&E
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`should render the card component with an image 1`] = `
<div>
  <div
    class="nhsuk-grid-row nhsuk-card-group"
  >
    <div
      class="nhsuk-grid-column-one-third nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card nhsuk-card--clickable"
      >
        <img
          alt="A person wearing a face mask"
          class="nhsuk-card__img"
          src="https://assets.nhs.uk/prod/images/A_0218_exercise-main_FKW1X7.width-690.jpg"
        />
        <div
          class="nhsuk-card__content"
        >
          <h2
            class="nhsuk-heading-m nhsuk-card__heading"
          >
            <a
              class="nhsuk-card__link"
              href="#"
            >
              Exercise
            </a>
          </h2>
          <p
            class="nhsuk-card__description"
          >
            Programmes, workouts and tips to get you moving and improve your fitness and wellbeing
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the card component with an urgent variant 1`] = `
<div>
  <div
    class="nhsuk-card nhsuk-card--care nhsuk-card--care--urgent"
  >
    <div
      class="nhsuk-card--care__heading-container"
    >
      <h2
        class="nhsuk-card--care__heading"
      >
        <span
          role="text"
        >
          <span
            class="nhsuk-u-visually-hidden"
          >
            Urgent advice: 
          </span>
          Ask for an urgent GP appointment if:
        </span>
      </h2>
      <span
        aria-hidden="true"
        class="nhsuk-card--care__arrow"
      />
    </div>
    <div
      class="nhsuk-card__content nhsuk-card__content--urgent"
    >
      <ul
        class="nhsuk-list nhsuk-list--bullet"
      >
        <li>
          you're an adult and have chickenpox
        </li>
        <li>
          you're pregnant and haven't had chickenpox before and you've been near someone with it
        </li>
        <li>
          you have a weakened immune system and you've been near someone with chickenpox
        </li>
        <li>
          you think your newborn baby has chickenpox
        </li>
      </ul>
      <p
        class="nhsuk-body"
      >
        In these situations, your GP can prescribe medicine to prevent complications. You need to take it within 24 hours of the spots coming out.
      </p>
    </div>
  </div>
</div>
`;

exports[`should render the top task card component 1`] = `
<div>
  <div
    class="nhsuk-grid-row nhsuk-card-group"
  >
    <div
      class="nhsuk-grid-column-one-third nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card nhsuk-card--clickable"
      >
        <div
          class="nhsuk-card__content"
        >
          <h5
            class="nhsuk-heading-xs nhsuk-card__heading"
          >
            <a
              class="nhsuk-card__link"
              href="#"
            >
              Order a repeat prescription
            </a>
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;
